PLANET-4660: EN Form block - Adjust Thank you message font
Ref: https://jira.greenpeace.org/browse/PLANET-4660

Fixes for EN Form Thank you message:
- Fix line-height of Thank you message title
- Fix social icon color in Thank you message

--- a/assets/src/styles/campaigns/themes/_theme_antarctic.scss
+++ b/assets/src/styles/campaigns/themes/_theme_antarctic.scss
@@ -48,7 +48,7 @@ body.theme-antarctic {
     @include page-section-header($sanctuary, $antarctic-blue);
   }
 
-  .page-template a:not(.btn) {
+  .page-template a:not(.btn):not(.share-btn) {
     color: $antarctic-purple;
     text-transform: uppercase;
 
