--- a/assets/src/styles/campaigns/themes/_theme_arctic.scss
+++ b/assets/src/styles/campaigns/themes/_theme_arctic.scss
@@ -52,7 +52,7 @@ body.theme-arctic {
   }
 
   .page-template a {
-    &:not(.btn) {
+    &:not(.btn):not(.share-btn) {
       color: $arctic-faded-red;
       text-transform: uppercase;
 
