--- a/assets/src/styles/campaigns/themes/_theme_forest.scss
+++ b/assets/src/styles/campaigns/themes/_theme_forest.scss
@@ -31,7 +31,7 @@ body.theme-forest {
   }
 
   .page-template {
-    a:not(.btn) {
+    a:not(.btn):not(.share-btn) {
       color: $forest-dark-green;
       text-transform: uppercase;
 
