--- a/src/layout/_footer.scss
+++ b/src/layout/_footer.scss
@@ -104,11 +104,10 @@
 
   li {
     display: inline-block;
-    margin: 0 16px 0 0;
     font-size: $font-size-xl;
 
-    &:last-child {
-      margin: 0;
+    &:not(:last-child) {
+      margin-inline-end: 16px;
     }
   }
 
