PLANET-5791 Fix last issues for Take Action boxout A/B test
- Move cover-card-more element outside of cover-card-content to fix the absolute positioning
- Use bottom instead of top positioning to adapt to potential longer translation strings for "Want to do more?"
- Add alt text to the image

--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
@@ -48,7 +48,7 @@
     color: $grey-80;
     font-size: 28px;
     line-height: 1;
-    margin-top: -60px;
+    bottom: 140px;
     position: absolute;
     left: 0;
 
@@ -149,7 +149,7 @@
 
     .cover-card-more {
       font-size: 40px;
-      margin-top: -80px;
+      bottom: 230px;
     }
   }
 
