--- a/templates/single.twig
+++ b/templates/single.twig
@@ -70,10 +70,10 @@
 							<time class="single-post-time" pubdate>{{ post.post_date|date }}</time>
 							{% if ( show_comments ) %}
 								<span class="separator">|</span>
-								<span id="comments-link" class="comment-link">
+								<a href="#comments" class="comment-link">
 									<img src="{{ data_nav_bar.images }}speech_bubble.svg">
-									<a class="quantity"> {{ post_comments_count }} <span class="display-text">{{ __( 'Comments', 'planet4-master-theme' ) }}</span> </a>
-								</span>
+									<span class="quantity"> {{ post_comments_count }} <span class="display-text">{{ __( 'Comments', 'planet4-master-theme' ) }}</span>
+								</a>
 							{% endif %}
 						</div>
 					</div>
