--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -2,16 +2,7 @@
 <html {{ fn('language_attributes', 'html') }}>
 <head>
 	<meta charset="{{ site.charset }}">
-	<title>
-		{% if post.password_required %}
-			{{ site.name }}
-			{% set post_tags = '' %}
-		{% elseif wp_title %}
-			{{ wp_title|e('esc_html')|raw }} - {{ site.name }}
-		{% else %}
-			{{ site.name }}
-		{% endif %}
-	</title>
+	{% include 'blocks/title.twig' %}
 
 	{% include 'blocks/meta_fields.twig' %}
 
