PLANET-5512 Update comments form label styles

--- a/templates/comment_form/author_field.twig
+++ b/templates/comment_form/author_field.twig
@@ -1,5 +1,5 @@
-<div class="form-group">
-	<label for="comments-name-input">{{ __( 'Name', 'planet4-master-theme' )  }} *</label>
+<div class="form-group animated-label">
 	{% set your_name = __( 'Your Name', 'planet4-master-theme' ) %}
-	<input type="text" class="form-control" id="author" name="author" placeholder="{{ your_name }}" required />
+	<input type="text" class="form-control" id="comments-name-input" name="author" placeholder="{{ your_name }}" required />
+	<label for="comments-name-input">{{ __( 'Name', 'planet4-master-theme' )  }}*</label>
 </div>
