--- a/templates/comment_form/comment_field.twig
+++ b/templates/comment_form/comment_field.twig
@@ -1,5 +1,5 @@
-<div class="form-group mb-0">
-	<label for="comments-textarea">{{ __( 'Comment', 'planet4-master-theme' )  }} *</label>
+<div class="form-group animated-label mb-0">
 	{% set your_comment = __( 'Your Comment', 'planet4-master-theme' ) %}
-	<textarea class="form-control" id="comment" name="comment" rows="6" placeholder="{{ your_comment  }}" required></textarea>
+	<textarea class="form-control" id="comments-textarea" name="comment" rows="6" placeholder="{{ your_comment }}" required></textarea>
+	<label for="comments-textarea">{{ __( 'Comment', 'planet4-master-theme' ) }}*</label>
 </div>
