--- a/templates/comment_form/email_field.twig
+++ b/templates/comment_form/email_field.twig
@@ -1,5 +1,5 @@
-<div class="form-group mb-0">
-	<label for="comments-email-input">{{ __( 'Email', 'planet4-master-theme' ) }} *</label>
+<div class="form-group animated-label mb-0">
 	{% set your_email = __( 'Your Email', 'planet4-master-theme' ) %}
-	<input type="email" class="form-control" id="email" name="email" placeholder="{{ your_email }}" required />
+	<input type="email" class="form-control" id="comments-email-input" name="email" placeholder="{{ your_email }}" required />
+	<label for="comments-email-input">{{ __( 'Email', 'planet4-master-theme' ) }}*</label>
 </div>
