PLANET-5748 Add password validation message on password protected page

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -84,3 +84,13 @@ div.page-template {
     }
   }
 }
+
+.error-message {
+  color: $orange-hover;
+}
+
+.password-field {
+  padding-top: $space-xs;
+  padding-bottom: $space-xs;
+  margin-bottom: $space-xs;
+}
