--- a/templates/single-password.twig
+++ b/templates/single-password.twig
@@ -10,17 +10,18 @@
 
 		<div class="container">
 			<div class="post-content">
-				<div class="post-content-lead">
-
-					<form id="password-form" class="mb-5" action="{{login_url}}?action=postpass" method="post">
-						<div class="form-group">
-							<label for="pwbox-{{post.ID}}"><h6>{{ __( 'To see the content of this page, please enter your password  below', 'planet4-master-theme' ) }}</h6></label>
-							<input class="form-control" name="post_password" id="pwbox-{{post.ID}}" type="password" size="20" maxlength="20">
+				<form id="password-form" action="{{login_url}}?action=postpass" method="post">
+					<div class="mb-3">
+						<label for="pwbox-{{post.ID}}" class="form-label"><h6>{{ __( 'To see the content of this page, please enter your password  below', 'planet4-master-theme' ) }}</h6></label>
+						<div class="col-sm-8">
+							<input class="form-control password-field" name="post_password" id="pwbox-{{post.ID}}" type="password">
 						</div>
+						{% if not is_password_valid %} <span class="error-message">{{ __( 'Sorry, Invalid password.', 'planet4-master-theme' ) }}</span> {% endif %}
+					</div>
+					<div class="mb-3">
 						<button class="btn btn-primary" type="submit">{{ __( 'Submit', 'planet4-master-theme' ) }}</button>
-					</form>
-
-				</div>
+					</div>
+				</form>
 			</div>
 		</div>
 
