--- a/templates/blocks/enform/enform_post.twig
+++ b/templates/blocks/enform/enform_post.twig
@@ -46,7 +46,7 @@
 							{{ 'true' == field.required or 'email' == field.input_type ? 'required' : '' }}
 							size="40"
 						/>
-						<label for="en__field_supporter_questions_{{ field.id }}">
+						<label for="en__field_supporter_{{ field.property }}">
 							{{ field.label }} {{ 'true' == field.required ? '*' : '' }}
 						</label>
 					</div>
