--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -20,6 +20,7 @@
 @import "blocks/Spreadsheet";
 @import "blocks/Submenu";
 @import "blocks/Timeline";
+@import "blocks/Cookies";
 
 // A/B test for Take Action Boxout
 @import "blocks/Covers/TakeActionBoxoutScroll";
