other test instance + change

--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -78,3 +78,7 @@ Text Domain: planet4-master-theme
 
 // Campaign overrides
 @import "campaigns/campaign_cookies";
+
+.top-navigation {
+  background: green !important;
+}
