--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -80,5 +80,5 @@ Text Domain: planet4-master-theme
 @import "campaigns/campaign_cookies";
 
 .top-navigation {
-  background: green !important;
+  background: blue !important;
 }
