--- a/templates/blocks/enform/country_select.twig
+++ b/templates/blocks/enform/country_select.twig
@@ -5,7 +5,7 @@
 			class="en__field__input en__field__input--select en_select_country form-control"
 			data-errormessage="{{ errorMessage }}"
 			{{ 'true' == field.required ? 'required' : '' }}>
-			<option value="" selected="selected" disabled={{ field.required == 'true' }}>{{ field.label }}{{ 'true' == field.required ? '*' : '' }}</option>
+			<option value="" selected="selected" disabled={{ field.required == 'true' }}>{{ __( 'Select Country or Region', 'planet4-engagingnetworks' ) }}{{ 'true' == field.required ? '*' : '' }}</option>
 			<option value="AF">Afghanistan</option>
 			<option value="AX">Åland Islands</option>
 			<option value="AL">Albania</option>
