Carousel Header WYSIWYG rewrite.
* Unify CSS Carousel files.
* Hide the CTA if no text is provided.
* Generalizing hook in preparation to reuse.
* Isolating Hammer effect to replace it.
* Add allowedFormats in RichText editors to prevent formatting
* Extract block hydration function
* Remove unnecessary condition
* Minor refactors in hooks
* Updating paths to new master-theme submodule
* Use visually-hidden class
* Update submodule dependencies

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeader.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeader.scss
@@ -38,10 +38,15 @@ $slide-transition-speed: 1s;
     position: absolute;
     top: 0;
     background-size: 0;
-    opacity: 0;
     z-index: 1;
     transform: rotate(0);
     transition: opacity $slide-transition-speed;
+
+    // Note: these rules are for
+    // inactive slides
+    opacity: 0;
+    pointer-events: none;
+    border: 10px solid #ffaa99;
 
     img {
       display: none;
@@ -51,6 +56,7 @@ $slide-transition-speed: 1s;
       z-index: 2;
       opacity: 1;
       transition: unset;
+      pointer-events: all;
     }
 
     &.next {
