PLANET-5523 Convert Covers block to WYSIWYG

--- a/assets/src/styles/blocks/Covers/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionCovers.scss
@@ -250,6 +250,7 @@
   font-family: $roboto;
   pointer-events: all;
   position: relative;
+  margin-inline-end: 8px;
 
   &:hover {
     text-decoration: underline;
