--- a/src/components/_spinner.scss
+++ b/src/components/_spinner.scss
@@ -16,7 +16,7 @@
 
 .three-quarters:not(:required) {
   animation: three-quarters 1250ms infinite linear;
-  border: 8px solid $green;
+  border: 8px solid $white;
   border-right-color: transparent;
   border-radius: 16px;
   box-sizing: border-box;
