PLANET-5842 Remove unused colors

--- a/assets/src/styles/blocks/Happypoint.scss
+++ b/assets/src/styles/blocks/Happypoint.scss
@@ -116,7 +116,7 @@
     font-family: $roboto;
     font-size: 0.8125rem;
     line-height: 18px;
-    color: $shadow-color;
+    color: $grey-60;
     text-align: left;
 
     @include medium-and-up {
