PLANET-5939: Campaign text hidden by navbar
On a campaign page with title hidden and no subtitle or description,
the text is on top of the page and gets hidden by the navbar.

Fix by assigning the same padding header title usually has
to the page content, in this context only (header hidden, no title)

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -33,6 +33,38 @@ div.page-template {
     max-width: 100%;
     height: auto;
   }
+
+  .page-header-hidden + &.no-page-title {
+    padding-top: $menu-height-small;
+
+    @include medium-and-up {
+      padding-top: $menu-height-large;
+    }
+
+    & > p:first-child {
+      padding-top: $space-xs;
+
+      @include small-and-up {
+        padding-top: $space-sm;
+      }
+
+      @include medium-and-up {
+        padding-top: $space-md;
+      }
+
+      @include large-and-up {
+        padding-top: $space-lg;
+      }
+
+      @include x-large-and-up {
+        padding-top: $space-xl;
+      }
+    }
+
+    .navigation-bar_min ~ & {
+      padding-top: $min-height;
+    }
+  }
 }
 
 .single-campaign {
