PLANET-5950: Remove yellow separator between gallery 3 cols images
Ref: https://jira.greenpeace.org/browse/PLANET-5950

Change background color to --body-background-color to look transparent

--- a/assets/src/styles/blocks/Gallery_content_three_column.scss
+++ b/assets/src/styles/blocks/Gallery_content_three_column.scss
@@ -74,8 +74,8 @@
 
     .second-column {
       transform: skew(-25deg);
-      border-left: 10px solid $brown-bg;
-      border-right: 10px solid $brown-bg;
+      border-left: 10px solid var(--body-background-color, $white);
+      border-right: 10px solid var(--body-background-color, $white);
       z-index: 2;
       width: 110%;
       right: 0;
@@ -102,8 +102,8 @@
 
   .second-column {
     transform: skew(25deg);
-    border-left: 10px solid $brown-bg;
-    border-right: 10px solid $brown-bg;
+    border-left: 10px solid var(--body-background-color, $white);
+    border-right: 10px solid var(--body-background-color, $white);
     z-index: 2;
     width: 110%;
     left: 0;
