PLANET-5843 Update black/grey colors for design system

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -229,8 +229,8 @@
   }
 
   &:active {
-    background-color: $dark-tiber;
-    border-color: $dark-tiber;
+    background-color: $grey-80;
+    border-color: $grey-80;
   }
 
   i {
