PLANET-5843 Update black/grey colors for design system

--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -116,7 +116,7 @@
     text-align: center;
     background: #97ed90;
     border-radius: 8px;
-    color: #1a1a1a;
+    color: $grey-80;
     word-break: keep-all;
 
     &.search-results-alternative-label-mobile {
