--- a/assets/src/scss/pages/search/_filter-sidebar.scss
+++ b/assets/src/scss/pages/search/_filter-sidebar.scss
@@ -16,7 +16,7 @@
       padding: 11px $n30;
       text-transform: uppercase;
       text-decoration: none;
-      color: $header-footer-bg;
+      color: $grey-80;
       font-weight: bold;
       position: relative;
       font-size: $font-size-sm;
@@ -51,7 +51,7 @@
         &:after {
           content: "";
           position: absolute;
-          background-color: $black;
+          background-color: $grey-80;
           transition: transform 0.25s ease-out;
         }
 
