--- a/assets/src/styles/blocks/Covers/CampaignCovers.scss
+++ b/assets/src/styles/blocks/Covers/CampaignCovers.scss
@@ -113,7 +113,7 @@
         width: 100%;
         z-index: 2;
         margin-bottom: 18px;
-        text-shadow: 1px 1px $black;
+        text-shadow: 1px 1px $grey-80;
 
         @include medium-and-up {
           margin-bottom: 20px;
