--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
@@ -133,7 +133,7 @@
     }
 
     .cover-card-excerpt {
-      color: #242424;
+      color: $grey;
       line-height: 1.5;
       font-size: 14px;
       display: -webkit-box;
