--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutScroll.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutScroll.scss
@@ -189,7 +189,7 @@
       bottom: 320px;
       left: 0;
       font-size: 28px;
-      color: $black;
+      color: $grey-80;
 
       html[dir="rtl"] & {
         right: 0;
