--- a/assets/src/styles/blocks/Covers/TakeActionCovers.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionCovers.scss
@@ -141,7 +141,7 @@
 
   &:hover, &:focus, &:focus-within {
     @include background-before-opacity(linear-gradient(180deg, rgba(51, 51, 51, 0.6), rgba(250, 247, 236, 0.9), rgba(255, 255, 255, 0.8)), 1);
-    box-shadow: 0 0 10px transparentize($black, .5);
+    box-shadow: 0 0 10px transparentize($grey-80, .5);
 
     @include medium-and-up {
       p {
@@ -168,7 +168,7 @@
   }
 
   &--evergreen {
-    @include background-before-opacity($black, .25);
+    @include background-before-opacity($grey-80, .25);
 
     &:hover {
       h2,
@@ -204,7 +204,7 @@
       color: $white;
     }
 
-    text-shadow: 1px 1px 3px $black;
+    text-shadow: 1px 1px 3px $grey-80;
     display: table;
     z-index: 1;
     pointer-events: all;
@@ -231,7 +231,7 @@
       box-shadow: none;
 
       &:hover {
-        box-shadow: 0 0 10px transparentize($black, .5);
+        box-shadow: 0 0 10px transparentize($grey-80, .5);
       }
     }
   }
@@ -245,7 +245,7 @@
   display: inline-block;
   margin-bottom: 8px;
   text-decoration: none;
-  text-shadow: 1.5px 1.5px 1.5px $black;
+  text-shadow: 1.5px 1.5px 1.5px $grey-80;
   font-weight: 800;
   font-family: $roboto;
   pointer-events: all;
