--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -153,7 +153,7 @@ a {
   }
 
   &:hover {
-    color: var(--link-hover--color, $link-hover-color);
+    color: var(--link--color, $link-color);
     text-decoration: underline;
   }
 }
