--- a/src/layout/_cookies.scss
+++ b/src/layout/_cookies.scss
@@ -36,7 +36,7 @@
     font-size: $font-size-xxs;
     margin-bottom: 10px;
     font-weight: 500;
-    color: $cookie-blue;
+    color: $dark-blue;
     text-align: left;
     font-family: $roboto;
     line-height: 1.5rem;
@@ -64,7 +64,7 @@
   }
 
   a {
-    color: $cookie-blue;
+    color: $dark-blue;
     text-decoration: underline;
 
     &:hover {
