--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -328,7 +328,7 @@
     font-family: $roboto;
     width: 100%;
     max-width: 100%;
-    background: linear-gradient(210deg, transparentize($med-blue, .8) 0%, $med-blue 100%);
+    background: linear-gradient(210deg, transparentize($dark-blue, .8) 0%, $dark-blue 100%);
     padding: $n10 $n20;
 
     @include medium-and-up {
