PLANET-5843 Update blue colors for design system

--- a/assets/src/styles/blocks/Columns.scss
+++ b/assets/src/styles/blocks/Columns.scss
@@ -223,7 +223,7 @@
           @include large-and-up {
             position: absolute;
             background-color: $dark-blue;
-            border-color: $spray;
+            border-color: $white;
             border-style: solid;
             border-width: 2px;
             border-radius: 50%;
