PLANET-5843 Update orange/red colors for design system

--- a/src/base/_colors.scss
+++ b/src/base/_colors.scss
@@ -60,13 +60,13 @@ $yellow-20: #fff6cd;
 // Orange
 //
 // $orange - #f36d3a;
+// $dark-orange - #f75848;
 // $orange-hover - #ee562d;
-// $orange-active - #cd4525;
 //
 // Styleguide Style.colors.orange
 $orange: #f36b35;
+$dark-orange: #f75848;
 $orange-hover: #ee562d;
-$orange-active: #dd4a22;
 
 // Various blues:
 $x-dark-blue:  #042233;
@@ -78,17 +78,11 @@ $comment-text: #d1dce2;
 
 // Various reds:
 $peach:       #eaccbb;
-$red:         #a01604;
-
-// Need to be re-assigned colors.
-$blue:      #2980b9;
-$brown-bg:  #faf7ec;
-$red:       #ad2330;
 
 // Social buttons
 $facebook: #4267b2;
 $twitter:  #55acee;
-$email:    #ea7179;
+$email:    #8a49de;
 $whatsapp: #25d366;
 
 // Used colors
