PLANET-5843 Update orange/red colors for design system

--- a/admin/css/admin_en.css
+++ b/admin/css/admin_en.css
@@ -1,5 +1,5 @@
 .enform-required-field {
-  border-color: #ff3333 !important;
+  border-color: #f75848 !important;
 }
 
 #fields_list_box, #questions_list_box, #optins_list_box {
