--- a/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
+++ b/assets/src/styles/blocks/Covers/TakeActionBoxoutBottom.scss
@@ -99,12 +99,9 @@
     }
 
     &:hover,
-    &:focus {
-      background-color: $orange-hover;
-    }
-
+    &:focus,
     &:active {
-      background-color: $orange-active;
+      background-color: $orange-hover;
     }
   }
 
