--- a/assets/src/styles/editorOverrides.scss
+++ b/assets/src/styles/editorOverrides.scss
@@ -189,7 +189,7 @@ input.describe[type=text][data-setting=caption] {
 }
 
 .cmb2_required_field_error {
-  border-color: $red !important;
+  border-color: $dark-orange !important;
 }
 
 .input_error {
