PLANET-5939: Image as first block separated from navbar
Ref: https://jira.greenpeace.org/browse/PLANET-5939

Last fix https://github.com/greenpeace/planet4-master-theme/pull/1293
introduced a change that separated image from navbar on campaigns
relying on an image as first block.

Fix: Add a specific margin for first image block, like first paragraph has.

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -61,6 +61,10 @@ div.page-template {
       }
     }
 
+    & > .wp-block-image:first-child {
+      margin-top: 0;
+    }
+
     .navigation-bar_min ~ & {
       padding-top: $min-height;
     }
