PLANET-5939: Header is too low on campaign templates with no title
Ref: https://jira.greenpeace.org/browse/PLANET-5939

Since https://github.com/greenpeace/planet4-master-theme/pull/1293 ,
Campaign templates implementing an override to margin of page-header
are pushing content too low.

Fix: reverting margin and padding of .page-header-hidden header

--- a/assets/src/styles/campaigns/base/_mixins.scss
+++ b/assets/src/styles/campaigns/base/_mixins.scss
@@ -83,6 +83,11 @@
   position: relative;
   padding-top: 78px;
 
+  &.page-header-hidden {
+    margin: 0;
+    padding: 0;
+  }
+
   .page-header-background {
     overflow: hidden;
 
