--- a/assets/src/styles/campaigns/themes/_theme_climate.scss
+++ b/assets/src/styles/campaigns/themes/_theme_climate.scss
@@ -99,6 +99,11 @@ body.theme-climate {
     min-height: 0;
     margin-bottom: 2rem;
 
+    &.page-header-hidden {
+      margin: 0;
+      padding: 0;
+    }
+
     .page-header-title,
     .page-header-subtitle {
       font-family: $jost;
