--- a/assets/src/styles/campaigns/themes/_theme_oil.scss
+++ b/assets/src/styles/campaigns/themes/_theme_oil.scss
@@ -79,6 +79,11 @@ body.theme-oil {
     min-height: 0;
     margin-bottom: 2rem;
 
+    &.page-header-hidden {
+      margin: 0;
+      padding: 0;
+    }
+
     .page-header-title,
     .page-header-subtitle {
       font-family: $anton;
