--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -9,7 +9,7 @@
 						   data-ga-action="Social Icons"
 						   data-ga-label="{{ social.icon }}">
 							{{ social.icon|svgicon }}
-							<span class="sr-only">{{ social.icon }}</span>
+							<span class="visually-hidden">{{ social.icon }}</span>
 						</a>
 					</li>
 				{% endfor %}
@@ -30,7 +30,7 @@
 						   data-ga-action="Social Icons"
 						   data-ga-label="{{ social.title }}">
 							{{ name|svgicon }}
-							<span class="sr-only">{{ social.title }}</span>
+							<span class="visually-hidden">{{ social.title }}</span>
 						</a>
 					</li>
 				{% endfor %}
