--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -75,6 +75,7 @@ Text Domain: planet4-master-theme
 @import "vendors/fontawesome";
 @import "vendors/usabilla";
 @import "vendors/gtm";
+@import "~lite-youtube-embed";
 
 // Campaign overrides
 @import "campaigns/campaign_cookies";
