Fix stylelint recursive path
stylelint needs a double-quoted path, otherwise it doesn't make a recursive lookup.

Fixed all pending issues stylelint did't report correctly up until now.

--- a/assets/src/styles/campaigns/themes/_theme_plastic.scss
+++ b/assets/src/styles/campaigns/themes/_theme_plastic.scss
@@ -1,7 +1,8 @@
 :root {
-  --link--color: #BD3DBD;
+  --link--color: #bd3dbd;
   --link-hover--color: #963196;
 }
+
 body.theme-plastic {
   $montserrat: "Montserrat", sans-serif;
 
