Adapt Base_Block and Webpack config to per-block entry points.
* Adapted the method in Base_Block to allow custom namespaces (e.g. planet4-blocks-beta)
* Added an entryPoints helper to the Webpack config.
* Converted the Accordion block as a first example (its the first in alphabetical order):
  - Moved the AccordionBlock to AccordionEditorScript following the convention. It no longers export a function.
  - Moved accordions.js from the public folder to AccordionScript.js (the frontend script).
  - Moved AccordionEditor.scss to its new destination. Added its dependencies accordingly.
  - Moved Accordion.scss to AccordionStyle.scss
* Removed the Accordion files from the bundles.
* Extract block name into base block.
* Shorten namespace constant name
* Add use statement to the REST API class.
* Restore hardcoded shortcode name
* Generalize rendering into Base_Block
* Remove planet4-blocks-beta namespace uses.

--- a/assets/src/styles/blocks/Accordion/AccordionEditorStyle.scss
+++ b/assets/src/styles/blocks/Accordion/AccordionEditorStyle.scss
@@ -1,3 +1,8 @@
+@import "../../styleguide/src/base/variables";
+@import "../../styleguide/src/base/colors";
+@import "../../styleguide/src/base/mixins";
+@import "../../styleguide/src/base/fonts";
+
 .add-button {
   cursor: pointer;
   font-weight: 500;
