--- a/assets/src/styles/blocks/Accordion/AccordionStyle.scss
+++ b/assets/src/styles/blocks/Accordion/AccordionStyle.scss
@@ -1,3 +1,8 @@
+@import "../../styleguide/src/base/variables";
+@import "../../styleguide/src/base/colors";
+@import "../../styleguide/src/base/mixins";
+@import "../../styleguide/src/base/fonts";
+
 .accordion-block {
   font-family: $roboto;
 
