PLANET-5970 Restore previous youtube embed width

--- a/assets/src/styles/blocks/Media.scss
+++ b/assets/src/styles/blocks/Media.scss
@@ -87,6 +87,11 @@
   width: 100% !important;
 }
 
+lite-youtube {
+  width: 100% !important;
+  max-width: 100%;
+}
+
 .wp-block-embed-twitter {
   .wp-block-embed__wrapper {
     padding-bottom: unset;
