A11y: Convert carousel anchors to buttons
Partial fix for:
https://github.com/greenpeace/planet4/issues/125

--- a/assets/src/styles/blocks/Gallery_carousel.scss
+++ b/assets/src/styles/blocks/Gallery_carousel.scss
@@ -186,6 +186,8 @@
     width: 30%;
     z-index: 3;
     cursor: pointer;
+    background: transparent;
+    border: 0;
 
     @include mobile-only {
       .carousel-control-prev-icon,
