--- a/src/base/_icons.scss
+++ b/src/base/_icons.scss
@@ -119,6 +119,29 @@ a.external-link {
     &:hover::before {
       background-color: transparentize($grey-80, 0.2);
     }
+
+    &:hover.pdf-link.has-text-color.has-grey-80-color::before {
+      background-color: $grey-80;
+    }
+
+    &:hover.pdf-link.has-text-color::before {
+      background-color: $white;
+    }
+  }
+
+  // Button block, text color manually set
+  .wp-block-button.has-text-color {
+    &::before,
+    &:hover::before {
+      background-color: $white;
+    }
+
+    &.has-grey-80-color {
+      &::before,
+      &:hover::before {
+        background-color: $grey-80;
+      }
+    }
   }
 
   a.external-link {
