--- a/assets/src/styles/blocks/File.scss
+++ b/assets/src/styles/blocks/File.scss
@@ -1,9 +1,6 @@
-.wp-block-file {
-  .wp-block-file__button {
-    overflow: unset;
-    padding: 0 1em;
-    width: min-content;
-    margin-left: 1em;
-    font-size: .8em;
-  }
+.wp-block-file .wp-block-file__button {
+  overflow: unset;
+  padding: 0 1em;
+  margin-inline-start: 1em;
+  font-size: .8em;
 }
