PLANET-5981 Rename attributes for Bootstrap 5

--- a/templates/navigation-bar.twig
+++ b/templates/navigation-bar.twig
@@ -7,8 +7,8 @@
 		{% set search_label = __( 'Search', 'planet4-master-theme' ) %}
 		<button
 			class="btn btn-navbar-toggle navbar-dropdown-toggle"
-			data-toggle="open"
-			data-target="#navbar-dropdown"
+			data-bs-toggle="open"
+			data-bs-target="#navbar-dropdown"
 			aria-expanded="false"
 			aria-label="{{ toggle_label }}">
 			<span
@@ -34,8 +34,8 @@
 				</button>
 				<button
 					class="country-dropdown-toggle"
-					data-toggle="open"
-					data-target="#country-list"
+					data-bs-toggle="open"
+					data-bs-target="#country-list"
 					aria-expanded="false"
 					aria-label="{{ data_nav_bar.country_dropdown_toggle }}"
 					data-ga-category="Menu Navigation"
@@ -87,8 +87,8 @@
 		</ul>
 		<button
 			class="navbar-search-toggle"
-			data-toggle="open"
-			data-target="#search_form"
+			data-bs-toggle="open"
+			data-bs-target="#search_form"
 			aria-expanded="false"
 			aria-label="{{ data_nav_bar.navbar_search_toggle }}"
 			data-ga-category="Menu Navigation"
