--- a/templates/taxonomy.twig
+++ b/templates/taxonomy.twig
@@ -31,7 +31,7 @@
 			<div class="row">
 				<div class="col-md-12 col-lg-5 col-xl-5 mt-3">
 					<button
-						data-content=".multiple-search-result .list-unstyled"
+						data-bs-content=".multiple-search-result .list-unstyled"
 						data-page="1"
 						data-total="{{ posts.pagination.total }}"
 						data-url="{{ fn('get_term_link', taxonomy.term_id ) }}"
