--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -123,6 +123,7 @@
       float: left;
       margin: 0 $n10 $n10 0;
       padding-top: 6px;
+      max-width: 100%;
     }
   }
 
@@ -131,6 +132,7 @@
       float: right;
       margin: 0 0 $n10 $n10;
       padding-top: 6px;
+      max-width: 100%;
     }
   }
 
