--- a/src/layout/_forms.scss
+++ b/src/layout/_forms.scss
@@ -192,29 +192,33 @@ textarea.form-control {
   resize: none;
 }
 
-.form-group.animated-label {
-  position: relative;
+.form-group {
+  margin-bottom: 1rem;
 
-  label {
-    position: absolute;
-    left: 0;
-    top: 16px;
-    font-weight: 500;
-    color: $grey-40;
-    padding-inline-start: 16px;
-    font-size: 11px;
-    font-family: $roboto;
-    opacity: 0;
-    transition: all .3s ease;
-    margin-bottom: 0;
-  }
+  &.animated-label {
+    position: relative;
 
-  .form-control:not(:placeholder-shown) {
-    padding: 18px 16px 4px 16px;
+    label {
+      position: absolute;
+      left: 0;
+      top: 16px;
+      font-weight: 500;
+      color: $grey-40;
+      padding-inline-start: 16px;
+      font-size: 11px;
+      font-family: $roboto;
+      opacity: 0;
+      transition: all .3s ease;
+      margin-bottom: 0;
+    }
 
-    & ~ label {
-      transform: translateY(-10px);
-      opacity: 1;
+    .form-control:not(:placeholder-shown) {
+      padding: 18px 16px 4px 16px;
+
+      & ~ label {
+        transform: translateY(-10px);
+        opacity: 1;
+      }
     }
   }
 }
