--- a/assets/src/styles/blocks/Happypoint.scss
+++ b/assets/src/styles/blocks/Happypoint.scss
@@ -148,7 +148,7 @@
   }
 
   form {
-    input, .custom-select {
+    input {
       height: 42px;
       border-radius: 4px;
       border-color: transparent;
